--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  audioplayers: ^0.13.2
   cupertino_icons: ^0.1.2
+
 
 dev_dependencies:
   flutter_test:
